--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "main": "index.js",
   "scripts": {
     "start": "sergey",
-    "dev": "sergey --watch"
+    "dev": "postcss ./assets/css/style.css -o ./dist/css/style.css --watch & sergey --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sergey": "0.0.13"
+    "autoprefixer": "^10.4.16",
+    "sergey": "^0.0.13"
   },
   "devDependencies": {
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
